code/gok8s/redis.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: redisbase 
  labels:
    app: redis
spec:
  selector:
    matchLabels:     
      app: redis
  replicas: 1
  template:  
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redisbase
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service        
metadata:
  name: redis-db
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
